fix library properties
url fixed from previously duplicated property

--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=Payam Sabouri <paysab@gmail.com>
 sentence=A library for converting Jalali(shamsi) Date to Gregorian(miladi) and vice versa.
 paragraph=The library supports leap years.
 category=Other
-url=http://wayoda.github.io/LedControl/
+url=https://github.com/payamsbr/DateConvLight
 architectures=*
 
