--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=LedControl
+name=DateConvL
 version=1.0.0
 author=Payam Sabouri <paysab@gmail.com>
 maintainer=Payam Sabouri <paysab@gmail.com>
