--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=DateConvL
 version=1.0.0
 author=Payam Sabouri <paysab@gmail.com>
 maintainer=Payam Sabouri <paysab@gmail.com>
-sentence=A library for converting Jalali(shamsi) Date to Gregorian(miladi) and vice versa.
+sentence=A library for converting Persian(shamsi/farsi) Date to Gregorian(miladi) and vice versa.
 paragraph=The library supports leap years.
 category=Other
 url=https://github.com/payamsbr/DateConvLight
